--- a/html/artistas.html
+++ b/html/artistas.html
@@ -246,21 +246,35 @@
 
     <!--MODAL CADASTRO-->
     <div id="modal-cadastro" class="modal-container flex">
-        <div class="modal register">
+
+        <div class="modal register flex">
             <button class="fechar">&times;</button>
-            <h2>Faça parte da comunidade Colorful Art</h2>
-            <img src="../img/tela.png" alt="paleta">
+
+            <div class="img-cadastro">
+                <img src="../img/grito-editada.png" alt="">
+            </div>
+
             <form>
-                <input type="text" class="input" placeholder="Seu nome" id="valida_nome">
-                <div class="border-input"></div>
-                <input type="text" class="input" placeholder="Seu e-mail" id="valida_email" onkeyup="validacao_email()">
+                <h2>Faça parte da comunidade Colorful Art</h2>
+                <img src="../img/tela.png" alt="paleta">
+
+                <ul id="mensagem_erro" class="error"></ul>
+
+                <input type="text" class="input" placeholder="Seu nome" id="valida_nome" onkeyup="validacao_nome()">
+                <div class="border-input" id="mensagem_nome"></div>
+
+                <input type="email" class="input" placeholder="Seu e-mail" id="valida_email"
+                    onkeyup="validacao_email()">
                 <div class="border-input" id="mensagem_email"></div>
+
                 <input type="password" class="input" placeholder="Crie uma senha" id="valida_senha"
                     onkeyup="validacao_senha()">
-                <div class="border-input" id="mensagem_senha1"></div>
+                <div class="border-input" id="mensagem_senha"></div>
+
                 <input type="password" class="input" placeholder="Confirmar senha" id="confirma_senha">
-                <div class="border-input" id="mensagem_senha2"></div>
-                <button class="enter" onclick="cadastrar()">CADASTRAR-SE</button>
+                <div class="border-input"></div>
+
+                <button type="submit" class="enter" onclick="cadastrar()">CADASTRAR-SE</button>
             </form>
         </div>
     </div>
