--- a/index.html
+++ b/index.html
@@ -67,11 +67,6 @@
     </header>
 
     <main>
-        <!--BANNER PRINCIPAL SLIDESHOW-->
-        <!-- <div class="frase-principal container flex">
-            <q>A Arte diz o indizível, exprime o inexprimível, traduz o intraduzível.</q>
-            <span>Leonardo Da Vinci</span>
-        </div> -->
         <div class="galeria">
             <div class="imagens">
                 <img src="img/paintings/gogh-amendoeira-em-flor.jpg" alt="Amendoeira em Flor">
@@ -106,7 +101,7 @@
                     <div class="flex">
                         <div onclick="op1_1()" class="opcao"><img src="img/paintings/botticelli-nascimento-venus.jpg">
                         </div>
-                        <div onclick="op2_1()" class="opcao"><img src="img/paintings/munch-the-scream.jpg"></div>
+                        <div onclick="op2_1()" class="opcao"><img src="img/paintings/gogh-starry-night.jpg"></div>
 
                         <div onclick="op3_1()" class="opcao"><img src="img/paintings/dali-persistencia-da-memoria.jpg">
                         </div>
@@ -166,12 +161,91 @@
                     </div>
                 </div>
 
-                <div>
-                    <div class="flex">
-                        <div id="result"></div>
+                <!--RESULTADOS DO QUIZ-->
+
+                <div class="resultado-quiz" id="result1">
+                    <h1 class="title-result-quiz">RENASCIMENTO</h1>
+                    <div class="content-result-quiz flex">
+                        <div class="image-result-quiz">
+                            <img src="img/paintings/vinci-monalisa.jpg">
+                        </div>
+                        <div class="text-result-quiz">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
+                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
+                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <h3 class="botao-principal">
+                                <a href="html/conteudo.html">Ver obras</a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="resultado-quiz" id="result2">
+                    <h1 class="title-result-quiz">EXPRESSIONISMO</h1>
+                    <div class="content-result-quiz flex">
+                        <div class="image-result-quiz">
+                            <img src="img/paintings/munch-the-scream.jpg">
+                        </div>
+                        <div class="text-result-quiz">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
+                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
+                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <h3 class="botao-principal">
+                                <a href="html/conteudo.html">Ver obras</a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="resultado-quiz" id="result3">
+                    <h1 class="title-result-quiz">SURREALISMO</h1>
+                    <div class="content-result-quiz flex">
+                        <div class="image-result-quiz">
+                            <img src="img/paintings/magritte-filho-do-homem.jpg">
+                        </div>
+                        <div class="text-result-quiz">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
+                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
+                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <h3 class="botao-principal">
+                                <a href="html/conteudo.html">Ver obras</a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="resultado-quiz" id="result4">
+                    <h1 class="title-result-quiz">POP ART</h1>
+                    <div class="content-result-quiz flex">
+                        <div class="image-result-quiz">
+                            <img src="img/woman-pop-art.jpg">
+                        </div>
+                        <div class="text-result-quiz">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
+                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
+                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <h3 class="botao-principal">
+                                <a href="html/conteudo.html">Ver obras</a>
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="resultado-quiz" id="result5">
+                    <h1 class="title-result-quiz">IMPRESSIONISMO</h1>
+                    <div class="content-result-quiz flex">
+                        <div class="image-result-quiz">
+                            <img src="img/paintings/monet-mulher-com-sombrinha.jpg">
+                        </div>
+                        <div class="text-result-quiz">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
+                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
+                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <h3 class="botao-principal">
+                                <a href="html/conteudo.html">Ver obras</a>
+                            </h3>
+                        </div>
                     </div>
                 </div>
             </div>
+
+
         </section>
 
 
@@ -465,7 +539,6 @@
         </div>
     </div>
 
-    </div>
 
 
     <script>
