--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                 <div class="combo-questao" id="q5">
                     <h2 class="pergunta">Qual seu maior desejo atualmente?</h2>
                     <div class="flex">
-                        <div onclick="op1_5()" class="opcao">Ajudar os outros e o planeta</div>
+                        <div onclick="op1_5()" class="opcao">Adquirir mais conhecimento</div>
                         <div onclick="op2_5()" class="opcao">Viver a vida intensamente</div>
                     </div>
                     <div class="flex">
-                        <div onclick="op3_5()" class="opcao">Adquirir mais conhecimento</div>
+                        <div onclick="op3_5()" class="opcao">Ajudar os outros e o planeta</div>
                         <div onclick="op4_5()" class="opcao">Enriquecer</div>
                     </div>
                 </div>
@@ -170,9 +170,10 @@
                             <img src="img/paintings/vinci-monalisa.jpg">
                         </div>
                         <div class="text-result-quiz">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
-                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
-                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <p>Assim como a arte renascentista, você também procura a perfeição, em si e no seu
+                                trabalho.
+                                Você é uma pessoa audaciosa e naturalmente líder! Que tal conhecer mais sobre o
+                                movimento do renascimento?</p>
                             <h3 class="botao-principal">
                                 <a href="html/conteudo.html">Ver obras</a>
                             </h3>
@@ -186,9 +187,11 @@
                             <img src="img/paintings/munch-the-scream.jpg">
                         </div>
                         <div class="text-result-quiz">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
-                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
-                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <p>Assim como a arte expressionista, você é extremamente intenso, e cheio de carga
+                                emocional.
+                                Você gosta de ajudar os outros e entender a complexidade humana, e se destaca por ser
+                                uma pessoa empática e perceptiva! Venha sentir as obras do movimento expressionista!
+                            </p>
                             <h3 class="botao-principal">
                                 <a href="html/conteudo.html">Ver obras</a>
                             </h3>
@@ -202,9 +205,10 @@
                             <img src="img/paintings/magritte-filho-do-homem.jpg">
                         </div>
                         <div class="text-result-quiz">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
-                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
-                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <p>Assim como no surrealismo, você é uma pessoa espontânea e de imaginação fértil!
+                                Adora histórias de fantasia e se destaca pela criatividade. Venha mergulhar no mundo do
+                                surrealismo!
+                            </p>
                             <h3 class="botao-principal">
                                 <a href="html/conteudo.html">Ver obras</a>
                             </h3>
@@ -218,9 +222,10 @@
                             <img src="img/woman-pop-art.jpg">
                         </div>
                         <div class="text-result-quiz">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
-                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
-                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <p>Você é uma pessoa de espírito jovem, extrovertida e sociável, e adora coisas modernas.
+                                Por onde passa, você é o centro das atenções. Você vai adorar obras do Pop Art, bora
+                                conhecer?
+                            </p>
                             <h3 class="botao-principal">
                                 <a href="html/conteudo.html">Ver obras</a>
                             </h3>
@@ -234,9 +239,11 @@
                             <img src="img/paintings/monet-mulher-com-sombrinha.jpg">
                         </div>
                         <div class="text-result-quiz">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores doloribus optio magnam
-                                nobis excepturi asperiores sunt! Ad explicabo tenetur consectetur placeat ducimus,
-                                molestiae quas officia vero architecto cum expedita perspiciatis!</p>
+                            <p>Assim como a arte impressionista, você é uma pessoa leve e tranquila, e adora estar ao ar
+                                livre.
+                                Você aprecia os bons momentos da vida e gosta de registra-los. Venha se impressionar com
+                                as obras do movimento impressionista na Colorful Art!
+                            </p>
                             <h3 class="botao-principal">
                                 <a href="html/conteudo.html">Ver obras</a>
                             </h3>
